Bug 155319 - facebook: can't set status unless you focus out
Summary: facebook: can't set status unless you focus out
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-09 07:10 UTC by A. Spehr
Modified: 2008-01-09 07:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description A. Spehr 2008-01-09 07:10:43 UTC
Version:           4.00.80 (KDE 4.0.80 >= 20080104) (using KDE Devel)
Installed from:    Compiled sources
Compiler:          4.2.3 20080102 
OS:                Linux

I can type in the status box, but can't hit return to set it. Clicking outside of the box does set it.
Comment 1 Maksim Orlovich 2008-01-09 07:50:48 UTC
SVN commit 758788 by orlovich:

Fix a bad regression due to porting --- non-text key events
were using a Qt-internal key ID and not browser-semi-independent one.

KDE3.5.x used to use ->ascii() here, which would return 0
in case of special keys, making us use the m_virtKeyVal,
as appropriate. But the misused here ->key would always
return some value. So don't use it, and just use the
event text() to find out unicode IDs of normal keys..

BUG:155319

 M  +1 -1      dom2_eventsimpl.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=758788