Fix a bad regression due to porting --- non-text key events were using a Qt-internal key ID and not browser-semi-independent one.

KDE3.5.x used to use ->ascii() here, which would return 0
in case of special keys, making us use the m_virtKeyVal,
as appropriate. But the misused here ->key would always
return some value. So don't use it, and just use the
event text() to find out unicode IDs of normal keys..

BUG:155319

svn path=/branches/KDE/4.0/kdelibs/; revision=758788